# ion-thruster

./: .gitignore  Cargo.toml  conversation0.md
crates/cfd-compute/: Cargo.toml
crates/cfd-compute-cpu/: Cargo.toml
crates/cfd-compute-cpu/src/: lib.rs
crates/cfd-compute/src/: backend.rs  kernel.rs  lib.rs
crates/cfd-core/: Cargo.toml
crates/cfd-core/src/: boundary.rs  error.rs  index.rs  lib.rs  vec3.rs
crates/cfd-fields/: Cargo.toml
crates/cfd-fields/src/: lib.rs
crates/cfd-fvm/: Cargo.toml
crates/cfd-fvm/src/: lib.rs  operators.rs
crates/cfd-io/: Cargo.toml
crates/cfd-io/src/: config.rs  lib.rs  vtu.rs
crates/cfd-linalg/: Cargo.toml
crates/cfd-linalg/src/: cg.rs  lib.rs  precond.rs  system.rs
crates/cfd-mesh/: Cargo.toml
crates/cfd-mesh/src/: geometry.rs  gmsh.rs  lib.rs  topology.rs
crates/cfd-time/: Cargo.toml
crates/cfd-time/src/: lib.rs
crates/ehd-cli/: Cargo.toml
crates/ehd-cli/src/: main.rs
crates/ehd-physics/: Cargo.toml
crates/ehd-physics/src/: lib.rs
docs/: build.sh  defs.json
docs/api/: api.md
docs/api/api_sections/: hierarchy.json
docs/api/api_sections/sections/: 01-api-reference.md
docs/api/api_sections/sections/01-api-reference/: 01-cfd-core-types-and-traits.md  02-cfd-mesh-mesh-and-gmsh-io.md  03-cfd-fields-fields-and-registry.md  04-cfd-linalg-sparse-solvers.md  05-cfd-compute-backend-abstraction.md  06-cfd-fvm-fvm-operators.md  07-cfd-time-time-integration.md  08-cfd-io-vtu-output-and-config.md  09-ehd-physics-ehd-module.md
docs/architecture/: architecture.md
docs/architecture/architecture_sections/: hierarchy.json
docs/architecture/architecture_sections/sections/: 01-architecture-guide.md
docs/architecture/architecture_sections/sections/01-architecture-guide/: 01-overview.md  02-crate-structure.md  03-data-flow.md  04-computebackend-abstraction.md  05-mesh-data-model.md  06-field-registry-and-state.md  07-physics-module-system.md  08-time-stepping-and-operator-splitting.md  09-performance-design.md  10-dependency-graph.md
docs/output/: api.en.md  api.ja.md  architecture.en.md  architecture.ja.md  physics.en.md  physics.ja.md  userguide.en.md  userguide.ja.md
docs/physics/: physics.md
docs/physics/physics_sections/: hierarchy.json
docs/physics/physics_sections/sections/: 01-physics-model-reference.md
docs/physics/physics_sections/sections/01-physics-model-reference/: 01-governing-equations.md  03-ion-transport.md  (+7 more)
docs/userguide/: userguide.md
docs/userguide/userguide_sections/: hierarchy.json
docs/userguide/userguide_sections/sections/: 01-user-guide.md
examples/wire_plate_2d/: simulation.toml  wire_plate.geo
(+124 files in other folders)
